<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/results_quiz"
    tools:context=".ResultsActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/quizResultsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#193343"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="700dp"
            android:layout_margin="1dp"
            android:padding="1dp">

            <LinearLayout
                android:id="@+id/linearLayoutQuizResults"
                android:layout_width="408dp"
                android:layout_height="519dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="119dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="61dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="240dp"
                    android:layout_height="57dp"
                    android:gravity="center"
                    android:paddingLeft="130dp"
                    android:singleLine="true"
                    android:text="@string/text_score"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalAnswered"
                    android:layout_width="259dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="120dp"
                    android:paddingLeft="50dp"
                    android:text="@string/text_totalAnswered"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/correctAnswered"
                    android:layout_width="214dp"
                    android:layout_height="46dp"
                    android:paddingLeft="50dp"
                    android:text="@string/text_correctAnswered"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wrongAnswered"
                    android:layout_width="214dp"
                    android:layout_height="46dp"
                    android:paddingLeft="50dp"
                    android:text="@string/text_wrongAnswered"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/pointsEarned"
                    android:layout_width="214dp"
                    android:layout_height="46dp"
                    android:paddingLeft="50dp"
                    android:text="@string/text_pointsEarned"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonNextQuiz"
                    android:layout_width="195dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="85dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_rectangle_blue"
                    android:text="@string/text_buttonNextQuiz"
                    android:textColor="#fff" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>