<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageViewBackRegister"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:src="@drawable/login_backwards"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="159dp"
        android:layout_height="104dp"
        android:src="@drawable/register_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textViewRegisterIntro1"
        android:layout_width="321dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/text_introRegister1"
        android:textColorHint="#D3FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textViewRegisterIntro2"
        android:layout_width="295dp"
        android:layout_height="21dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/text_introRegister2"
        android:textColorHint="#D3FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <EditText
        android:id="@+id/editTextUsernameRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_person"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#D3FFFFFF"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />


    <EditText

        android:id="@+id/editTextEmailRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#D3FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <EditText
        android:id="@+id/editTextPassRegister"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#D3FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />


    <CheckBox
        android:id="@+id/checkBoxTerms"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:buttonTint="#D3FFFFFF"
        android:text="@string/checkbox_terms"
        android:textColor="#C8FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/button_rectangle"
        android:text="@string/text_register"
        android:textColor="#3b3838"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781" />


    <TextView
        android:id="@+id/textViewAlreadyMember"
        android:layout_width="132dp"
        android:layout_height="24dp"
        android:text="@string/text_alreadyMember"
        android:textColor="#D3FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <TextView
        android:id="@+id/textViewAlreadyMemberSignIn"
        android:layout_width="60dp"
        android:layout_height="24dp"
        android:text="@string/text_alreadyMemberSignIn"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />

</androidx.constraintlayout.widget.ConstraintLayout>