<?xml version="1.0" encoding="utf-8"?>
<!-- https://developer.android.com/guide/topics/ui/layout/linear -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/categories"
    tools:context=".QuizCategoriesActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/quizCategoriesToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#193343"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:titleTextColor="@android:color/white">

                </androidx.appcompat.widget.Toolbar>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="400dp"
                    android:layout_height="140dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="379dp"
                        android:layout_height="139dp"
                        android:src="@drawable/app_logo" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btn_category1"
                    android:text="@string/text_category1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#72656C8C"
                    android:paddingLeft="30dp"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:textSize="18sp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category2"
                    android:text="@string/text_category2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category3"
                    android:text="@string/text_category3"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category4"
                    android:text="@string/text_category4"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category5"
                    android:text="@string/text_category5"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category6"
                    android:text="@string/text_category6"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category7"
                    android:text="@string/text_category7"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category8"
                    android:text="@string/text_category8"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category9"
                    android:text="@string/text_category9"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_category10"
                    android:text="@string/text_category10"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/categoriesTextColor"
                    android:background="@color/backgroundColor"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>